css: fix image not showing in padding

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -82,8 +82,10 @@ nav a:hover {
     }
 }
 
-#content {
+#main {
     background-image: url("../img/bg.png");
+}
+#content {
     margin: 0 auto;
     width: 93.5%
 }
